--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,17 @@
         </resources>
     </build>
 
+    <repositories>
+        <repository>
+            <id>md5-repo</id>
+            <url>http://repo.md-5.net/content/groups/public</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
-            <groupId>us.ikari.weeaboospigot</groupId>
-            <artifactId>weeaboospigot-api</artifactId>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
             <version>1.7.10-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
@@ -75,6 +82,19 @@
             <groupId>us.ikari.phoenix</groupId>
             <artifactId>phoenix-scoreboard</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>us.ikari.phoenix</groupId>
+            <artifactId>phoenix-lang</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
