--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>us.ikari.phoenix</groupId>
+            <artifactId>phoenix-gui</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.10</version>
