--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,2 +1,16 @@
 REDIS:
   HOST: localhost
+STATE:
+  LOBBY:
+    COUNTDOWN: 5000
+  EVENT:
+    FIRST_REFILL:
+      START: 0
+      COUNTDOWN: 10000
+    SECOND_REFILL:
+      START: 20000
+      COUNTDOWN: 10000
+    DEATHMATCH:
+      START: 35000
+      COUNTDOWN: 10000
+      PERIOD: 5000
