--- a/pom.xml
+++ b/pom.xml
@@ -57,14 +57,30 @@
             <id>md5-repo</id>
             <url>http://repo.md-5.net/content/groups/public</url>
         </repository>
+        <repository>
+            <id>sk89q</id>
+            <url>http://maven.sk89q.com/repo/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <dependencies>
         <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
+            <groupId>us.ikari.weeaboospigot</groupId>
+            <artifactId>weeaboospigot</artifactId>
             <version>1.7.10-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>us.ikari.phoenix</groupId>
+            <artifactId>phoenix-lang</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>us.ikari.phoenix</groupId>
@@ -86,12 +102,6 @@
         </dependency>
         <dependency>
             <groupId>us.ikari.phoenix</groupId>
-            <artifactId>phoenix-lang</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>us.ikari.phoenix</groupId>
             <artifactId>phoenix-gui</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -99,6 +109,18 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.10</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.flowpowered</groupId>
+            <artifactId>flow-nbt</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sk89q</groupId>
+            <artifactId>worldedit</artifactId>
+            <version>5.6.3-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
