--- a/src/main/resources/lang_ex.yml
+++ b/src/main/resources/lang_ex.yml
@@ -1,57 +1,61 @@
 SCOREBOARD:
-  TITLE: "&e&lSKYWARS"
+  TITLE: "&6&lSKYWARS"
   LOBBY_WAITING:
-    - "&r"
-    - "&fPlayers:&a {0}/{1}"
-    - "&r&r"
-    - "&fStarting soon.."
-    - "&r&r&r"
-    - "&fServer:&a {3}"
-    - "&r&r&r&r"
-    - "&ewww.ikari.us"
+      - "&eWaiting for players..."
+      - "&r"
+      - "&7Players:&f {0} / {1}"
+      - "&7Server:&f {3}"
+      - "&r&r&r&r"
+      - "&6www.ikari.us"
   LOBBY:
+    - "&eGame begins in {2}s..."
     - "&r"
-    - "&fPlayers: &a{0}/{1}"
-    - "&r&r"
-    - "&fStarting in:&a {2}s"
-    - "&r&r&r"
-    - "&fServer:&a {3}"
+    - "&7Players: &f{0} / {1}"
+    - "&7Server:&f {3}"
     - "&r&r&r&r"
-    - "&ewww.ikari.us"
+    - "&6www.ikari.us"
   GAME:
-    - "&7Solo {0}"
+    - "&eSolo {0}"
     - "&r"
-    - "&fPlayers left: &a{2}"
-    - "&r&r"
-    - "&fKills:&a {3}"
-    - "Map:&a {4}"
+    - "&7Players Left: &f{2}"
+    - "&7Kills:&f {3}"
+    - "&7Map:&6 {4}"
     - "&r&r&r&r"
-    - "&Ewww.ikari.us"
+    - "&6www.ikari.us"
   EVENT_REFILL:
     - "&7Solo {0}"
     - "&r"
-    - "&fNext Event:"
-    - "&aRefill {1}"
+    - "&eNext Event"
+    - "&7Refill {1}"
     - "&r&r"
-    - "&fPlayers left: &a{2}"
-    - "&r&r&R"
-    - "&fKills:&a {3}"
-    - "&fMap:&a {4}"
+    - "&7Players Left: &f{2}"
+    - "&7Kills:&f {3}"
+    - "&7Map:&e {4}"
     - "&r&r&R&r&r"
-    - "&Ewww.ikari.us"
+    - "&6www.ikari.us"
   EVENT_DEATHMATCH:
     - "&7Solo {0}"
     - "&r"
-    - "&fNext Event:"
+    - "&eNext Event"
     - "&cDeathmatch {1}"
     - "&r&r"
-    - "&fPlayers left: &a{2}"
-    - "&r&r&R"
-    - "&fKills:&a {3}"
-    - "&fMap:&a {4}"
+    - "&7Players Left: &f{2}"
+    - "&7Kills:&f {3}"
+    - "&7Map:&f {4}"
     - "&r&r&R&r&r"
-    - "&Ewww.ikari.us"
+    - "&6www.ikari.us"
 GAME:
+  GAME_OVER: "Game over. Winner: {0}"
+  WON:
+    - "&9&m-----------------------------------"
+    - "&7Congratulations to this mother fucker {0} for winning."
+    - "&e&lFucking Leaderboards"
+    - " "
+    - "&c&lFirst Place: {1}"
+    - "&e&lSecond Place: {2}"
+    - "&a&lThird Place: {3}"
+    - "&9&m-----------------------------------"
+  QUIT: "&a{0}&f has quit the game!"
   EVENT:
     REFILL_COUNTDOWN: "&6&lChests will be refilled in {0}!"
     REFILL: "&6&lChests have been refilled!"
@@ -63,6 +67,9 @@ KIT:
   BOMBER:
     NAME: "Terrorist"
     DESCRIPTION: "Blow shit the fuck up, and if you're MLG enough, blow yourself sky-high and land the bitch with your water bucket."
+  TRAPPER:
+    NAME: "Trapper"
+    DESCRIPTION: "Shit at PvP? Simply in the mood to make some queers rage quit? Well, fuck ups someone's day with some pistons, or build a saferoom and pray to Christ."
 LOBBY:
   JOIN: "&a{0}&f has joined the lobby! &a({1}/{2})"
   QUIT: "&a{0}&f has quit the lobby! &a({1}/{2})"
@@ -71,6 +78,16 @@ LOBBY:
     LORE:
       - "&fAre you really so fucking stupid that you don't know how to use this shit?"
 MENU:
+  SPECTATOR:
+    TITLE: "Teleport to a fucking player"
+    LEAVE:
+      TITLE: "&cQuit the game like a pussy"
+      LORE:
+        - "&fFake news."
+    COMPASS:
+      TITLE: "&aTeleport to a fucking player"
+      LORE:
+        - "&fCome on, really dumb fuck?"
   KIT_SELECTION:
     SELECTED: "&fYou have selected the fucking &a{0}&f kit!"
     TITLE: "Select a fucking kit"
