--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>us.ikari</groupId>
+            <artifactId>Azazel</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>us.ikari.phoenix</groupId>
             <artifactId>phoenix-network</artifactId>
             <version>1.0-SNAPSHOT</version>
