--- a/src/main/resources/lang_ex.yml
+++ b/src/main/resources/lang_ex.yml
@@ -1,60 +1,176 @@
-SCOREBOARD:
-  TITLE: "&6&lSKYWARS"
+TAB:
+  ALIVE: "&a"
+  DEAD: "&7&m"
   LOBBY_WAITING:
+    LEFT:
+      - "&6&lIKARI SKYWARS"
+      - ""
+      - "&e&lYou"
+      - "&7Kit:&f {1}"
+      - ""
+      - ""
+      - "&e&lLocation"
+      - "&b{2}"
+      - "({3}, {4})&7 [{5}]"
+    MIDDLE:
+      - "&6&lIKARI SKYWARS"
+      - ""
+      - "&e&lPlayers"
+      - "&a{6}"
+    RIGHT:
+      - "&6&lIKARI SKYWARS"
+      - ""
+      - "&e&lGame"
+      - "&7Players:&f {7}"
+      - ""
+      - ""
+      - "&e&lState"
+      - "Starting soon..."
+      - ""
+      - "&e&lServer"
+      - "&7NA:&f SW-1"
+  LOBBY:
+    LEFT:
+      - "&6&lIKARI SKYWARS"
+      - ""
+      - "&e&lYou"
+      - "&7Kit:&f {1}"
+      - ""
+      - ""
+      - "&e&lLocation"
+      - "&b{2}"
+      - "({3}, {4})&7 [{5}]"
+    MIDDLE:
+      - "&6&lIKARI SKYWARS"
+      - ""
+      - "&e&lPlayers"
+      - "&a{6}"
+    RIGHT:
+      - "&6&lIKARI SKYWARS"
+      - ""
+      - "&e&lGame"
+      - "&7Players:&f {7}"
+      - ""
+      - ""
+      - "&e&lState"
+      - "Starting in {10}s"
+      - ""
+      - "&e&lServer"
+      - "&7NA:&f SW-1"
+  GAME:
+    LEFT:
+      - "&6&lIKARI SKYWARS"
+      - ""
+      - "&e&lYou"
+      - "&7Kills:&f {0}"
+      - "&7Kit:&f {1}"
+      - ""
+      - ""
+      - "&e&lLocation"
+      - "&b{2}"
+      - "({3}, {4})&7 [{5}]"
+    MIDDLE:
+      - "&6&lIKARI SKYWARS"
+      - ""
+      - "&e&lPlayers"
+      - "&a{6}"
+    RIGHT:
+      - "&6&lIKARI SKYWARS"
+      - ""
+      - "&e&lGame"
+      - "&7Alive Players:&f {7}"
+      - "&7Spectators:&f {8}"
+      - ""
+      - ""
+      - "&e&lServer"
+      - "&7NA:&f SW-1"
+SCOREBOARD:
+  TITLE: "&6&lSkyWars"
+  LOBBY_WAITING:
+      - "&7&m--------------------"
       - "&eWaiting for players..."
       - "&r"
       - "&7Players:&f {0} / {1}"
       - "&7Server:&f {3}"
+      - "&7Kit:&f {4}"
       - "&r&r&r&r"
-      - "&6www.ikari.us"
+      - "&6www.ikari.us&7 (Solo)"
+      - "&7&m--------------------"
   LOBBY:
+    - "&7&m--------------------"
     - "&eGame begins in {2}s..."
     - "&r"
     - "&7Players: &f{0} / {1}"
     - "&7Server:&f {3}"
+    - "&7Kit:&f {4}"
     - "&r&r&r&r"
-    - "&6www.ikari.us"
+    - "&6www.ikari.us&7 (Solo)"
+    - "&7&m--------------------"
   GAME:
-    - "&eSolo {0}"
-    - "&r"
-    - "&7Players Left: &f{2}"
+    - "&7&m--------------------"
+    - "&7Players Alive: &f{2}"
     - "&7Kills:&f {3}"
     - "&7Map:&6 {4}"
     - "&r&r&r&r"
-    - "&6www.ikari.us"
+    - "&6www.ikari.us&7 (Solo)"
+    - "&7&m--------------------"
   EVENT_REFILL:
-    - "&7Solo {0}"
-    - "&r"
-    - "&eNext Event"
-    - "&7Refill {1}"
+    - "&7&m--------------------"
+    - "&6Next Event"
+    - "&eRefill&7 ({1})"
     - "&r&r"
-    - "&7Players Left: &f{2}"
+    - "&7Players Alive: &f{2}"
     - "&7Kills:&f {3}"
     - "&7Map:&e {4}"
     - "&r&r&R&r&r"
-    - "&6www.ikari.us"
+    - "&6www.ikari.us&7 (Solo)"
+    - "&7&m--------------------"
   EVENT_DEATHMATCH:
-    - "&7Solo {0}"
-    - "&r"
-    - "&eNext Event"
-    - "&cDeathmatch {1}"
+    - "&7&m--------------------"
+    - "&6Next Event"
+    - "&eDeathmatch &7({1})"
     - "&r&r"
-    - "&7Players Left: &f{2}"
+    - "&7Players Alive: &f{2}"
     - "&7Kills:&f {3}"
     - "&7Map:&f {4}"
-    - "&r&r&R&r&r"
-    - "&6www.ikari.us"
+    - "&r&r&r&r&r"
+    - "&6www.ikari.us&7 (Solo)"
+    - "&7&m--------------------"
+DEATH_MESSAGE:
+  PLAYER: "{0}&e was slain by &r{1}&e."
+  CUSTOM: "{0}&e died."
+  SUFFOCATION: "{0}&e suffocated."
+  FALL: "{0}&e fell off a cliff."
+  FIRE: "{0}&e burnt to a crisp."
+  FIRE_TICK: "{0}&e burnt to a crisp."
+  LAVA: "{0}&e tried to swim in lava."
+  DROWNING: "{0}&e drowned."
+  BLOCK_EXPLOSION: "{0}&e blew up."
+  ENTITY_EXPLOSION: "{9}&e blew up."
+  VOID: "{0}&e fell into the void."
+  STARVATION: "{0}&e starved to death."
 GAME:
+  HEALTH: "{0}&e had &c{1} hearts&e."
+  HIT: "{0}&e has &c{1} hearts&e."
+  START:
+    - "&7&m----------------------------------------------------"
+    - "&6&lSKYWARS"
+    - " "
+    - "&eGather resources from your island and attempt to eliminate"
+    - "&eevery other player until you are the last one standing."
+    - " "
+    - "&e&oTip: Head to the center island for special chests!"
+    - " "
+    - "&7&m----------------------------------------------------"
+    - "&c&lTeaming is not allowed in this game!"
   GAME_OVER: "Game over. Winner: {0}"
   WON:
-    - "&9&m-----------------------------------"
-    - "&7Congratulations to this mother fucker {0} for winning."
-    - "&e&lFucking Leaderboards"
+    - "&7&m----------------------------------------------------"
+    - "&6&lSKYWARS"
     - " "
-    - "&c&lFirst Place: {1}"
-    - "&e&lSecond Place: {2}"
-    - "&a&lThird Place: {3}"
-    - "&9&m-----------------------------------"
+    - "&eWinner &7- {0}"
+    - " "
+    - "&7&m----------------------------------------------------"
   QUIT: "&a{0}&f has quit the game!"
   EVENT:
     REFILL_COUNTDOWN: "&6&lChests will be refilled in {0}!"
@@ -70,6 +186,25 @@ KIT:
   TRAPPER:
     NAME: "Trapper"
     DESCRIPTION: "Shit at PvP? Simply in the mood to make some queers rage quit? Well, fuck ups someone's day with some pistons, or build a saferoom and pray to Christ."
+  MINER:
+    NAME: "School Shooter"
+    DESCRIPTION: "Only god knows why you'd use this shit kit, but hey, to each their own, right?"
+  GHOST:
+    NAME: "MeeZoid"
+    DESCRIPTION: "Only click like 6 CPS? Simply too shit to PvP? Use an invisibility potion to camp out randoms!"
+  MERCHANT:
+    NAME: "Merchant"
+    DESCRIPTION: "Flex that bread, cuz that's all your making homie."
+  RUSHER:
+    NAME: "Degenerate"
+    DESCRIPTION: "Instead of playing the game, be that one bitch that builds over and K.O's the naked dude."
+  GENERATOR:
+    NAME: "Skyblock Noob"
+    DESCRIPTION: "You're playing SkyWars, not SkyBlock you autistic fuck why would you use this kit?"
+  ENDERMAN:
+    NAME: "Queer"
+    DESCRIPTION: "Receive an enderpearl every time you kill someone, have fun throwing those ball shaped pearls around faggot."
+
 LOBBY:
   JOIN: "&a{0}&f has joined the lobby! &a({1}/{2})"
   QUIT: "&a{0}&f has quit the lobby! &a({1}/{2})"
