--- a/nirvana-bukkit/src/main/resources/config.yml
+++ b/nirvana-bukkit/src/main/resources/config.yml
@@ -1,3 +1,9 @@
+TYPE: POTPVP
+GAME_MODIFIERS:
+  ENABLED: FALSE
+ENDERPEARL_COOLDOWN:
+  ENABLED: TRUE
+  DURATION: 16000
 REDIS:
   HOST: localhost
 STATE:
