--- a/nirvana-bukkit/pom.xml
+++ b/nirvana-bukkit/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>Nirvana</artifactId>
-        <groupId>com.veltpvp</groupId>
+        <groupId>com.veltpvp.nirvana</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -75,6 +75,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.veltpvp.nirvana</groupId>
+            <artifactId>nirvana-packet</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>us.ikari.phoenix</groupId>
             <artifactId>phoenix-lang</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -89,12 +95,6 @@
         <dependency>
             <groupId>us.ikari</groupId>
             <artifactId>Azazel</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>us.ikari.phoenix</groupId>
-            <artifactId>phoenix-network</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
