--- a/nirvana-game/src/main/resources/config.yml
+++ b/nirvana-game/src/main/resources/config.yml
@@ -1,4 +1,3 @@
-TYPE: POTPVP
 GAME_MODIFIERS:
   ENABLED: FALSE
 ENDERPEARL_COOLDOWN:
@@ -6,6 +5,14 @@ ENDERPEARL_COOLDOWN:
   DURATION: 16000
 REDIS:
   HOST: localhost
+MONGO:
+  HOST: localhost
+  PORT: 27017
+  DATABASE: "skywars"
+  AUTHENTICATION:
+    ENABLED: FALSE
+    USER: user
+    PASSWORD: password
 STATE:
   LOBBY:
     COUNTDOWN: 35000
