--- a/nirvana-lobby/pom.xml
+++ b/nirvana-lobby/pom.xml
@@ -27,13 +27,22 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.1</version>
+                <version>2.4.3</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
                         </goals>
+                        <configuration>
+                            <minimizeJar>false</minimizeJar>
+                            <relocations>
+                                <relocation>
+                                    <pattern>us.ikari.phoenix.network</pattern>
+                                    <shadedPattern>com.veltpvp.nirvana.shaded.us.ikari.phoenix.network</shadedPattern>
+                                </relocation>
+                            </relocations>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -104,6 +113,30 @@
             <groupId>us.ikari.phoenix</groupId>
             <artifactId>phoenix-gui</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>us.ikari.phoenix</groupId>
+            <artifactId>phoenix-hologram</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>us.ikari.phoenix</groupId>
+            <artifactId>phoenix-npc</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.veltpvp.nitrogen</groupId>
+            <artifactId>nitrogen-parties</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>us.ikari.phoenix</groupId>
+            <artifactId>phoenix-utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
