--- a/nirvana-proxy/pom.xml
+++ b/nirvana-proxy/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>nirvana-proxy</artifactId>
-    <name>nirvana-bukkit</name>
+    <name>nirvana-proxy</name>
     <description>Skywars proxy plugin for the VeltPvP network</description>
 
     <build>
@@ -26,7 +26,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.1</version>
+                <version>2.4.3</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -81,6 +81,7 @@
             <groupId>com.veltpvp.nirvana</groupId>
             <artifactId>nirvana-packet</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
