--- a/nirvana-lobby/src/main/resources/plugin.yml
+++ b/nirvana-lobby/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 main: com.veltpvp.nirvana.Nirvana
 name: ${project.name}
 description: ${project.description}
+depend: [ qLib ]
 version: ${project.version}
 author: BizarreAlex
 load: STARTUP
