--- a/nirvana-lobby/pom.xml
+++ b/nirvana-lobby/pom.xml
@@ -144,6 +144,12 @@
             <version>1.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>net.frozenorb</groupId>
+            <artifactId>qLib</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
