--- a/nirvana-game/src/main/resources/lang_en.yml
+++ b/nirvana-game/src/main/resources/lang_en.yml
@@ -53,7 +53,7 @@ TAB:
       - ""
       - ""
       - "&e&lState"
-      - "Starting in {10}s"
+      - "Starting {10}"
       - ""
       - "&e&lServer"
       - "&7NA:&f {9}"
@@ -85,7 +85,7 @@ TAB:
       - "&e&lServer"
       - "&7NA:&f {9}"
 SCOREBOARD:
-  TITLE: "&d&lSkyWars"
+  TITLE: "&d&lVeltPvP &7(SkyWars)"
   LOBBY_WAITING:
       - "&7&m--------------------"
       - "&eWaiting for players..."
@@ -99,7 +99,7 @@ SCOREBOARD:
       - "&7&m--------------------"
   LOBBY:
     - "&7&m--------------------"
-    - "&eGame begins in {2}s..."
+    - "&eGame begins {2}..."
     - "&r"
     - "&7Players: &f{0} / {1}"
     - "&7Server:&f {3}"
@@ -142,45 +142,49 @@ SCOREBOARD:
     - "&dwww.veltpvp.com&7 (Solo)"
     - "&7&m--------------------"
 DEATH_MESSAGE:
-  PLAYER: "{0}&e was slain by &r{1}&e."
-  CUSTOM: "{0}&e died."
-  SUFFOCATION: "{0}&e suffocated."
-  FALL: "{0}&e fell off a cliff."
-  FIRE: "{0}&e burnt to a crisp."
-  FIRE_TICK: "{0}&e burnt to a crisp."
-  LAVA: "{0}&e tried to swim in lava."
-  DROWNING: "{0}&e drowned."
-  BLOCK_EXPLOSION: "{0}&e blew up."
-  ENTITY_EXPLOSION: "{0}&e blew up."
-  VOID: "{0}&e fell into the void."
-  STARVATION: "{0}&e starved to death."
+  PLAYER: "{0}&7[{1}]&e was slain by {2}&7[{3}]"
+  CUSTOM: "{0}&7[{1}]&e died"
+  SUFFOCATION: "{0}&7[{1}]&e suffocated"
+  FALL: "{0}&7[{1}]&e fell off a cliff"
+  FIRE: "{0}&7[{1}]&e burnt to a crisp"
+  FIRE_TICK: "{0}&7[{1}]&e burnt to a crisp"
+  LAVA: "{0}&7[{1}]&e tried to swim in lava"
+  DROWNING: "{0}&7[{1}]&e drowned"
+  BLOCK_EXPLOSION: "{0}&7[{1}]&e blew up"
+  ENTITY_EXPLOSION: "{0}&7[{1}]&e blew up"
+  VOID: "{0}&7[{1}]&e fell into the void"
+  STARVATION: "{0}&7[{1}]&e starved to death"
 GAME:
   HEALTH: "{0}&e had &c{1} hearts&e."
   HIT: "{0}&e has &c{1} hearts&e."
   START:
     - "&7&m----------------------------------------------------"
-    - "&d&lSKYWARS"
+    - "&d&lVeltPvP SkyWars"
     - " "
     - "&eGather resources from your island and attempt to eliminate"
     - "&eevery other player until you are the last one standing."
     - " "
-    - "&e&oTip: Head to the center island for special chests!"
+    - "&c&lTIP&c: &eHead to the center island for special chests!"
     - " "
     - "&7&m----------------------------------------------------"
     - "&c&lTeaming is not allowed in this game!"
   GAME_OVER: "Game over. Winner: {0}"
   WON:
     - "&7&m----------------------------------------------------"
-    - "&d&lSKYWARS"
+    - "&d&lVeltPvP SkyWars"
     - " "
-    - "&eWinner &7- {0}"
+    - "&a&lWinner &7- {0} &7({1})"
+    - " "
+    - "&e&lFirst Killer &7- {2} &7({5})"
+    - "&6&lSecond Killer &7- {3} &7({6})"
+    - "&c&lThird Killer &7- {4} &7({7})"
     - " "
     - "&7&m----------------------------------------------------"
-  QUIT: "&a{0}&f has quit the game!"
+  QUIT: "&a{0}&f has left the game."
   EVENT:
     REFILL_COUNTDOWN: "&6&lChests will be refilled in {0}!"
     REFILL: "&6&lChests have been refilled!"
-    DEATHMATCH: "&c&lDeathmatch has begun! TNT will now rain from the sky!"
+    DEATHMATCH: "&c&lDeathmatch has begun! TNT will rain from the sky!"
 KIT:
   DEFAULT:
     NAME: "Basic"
