--- a/nirvana-parties/src/main/resources/plugin.yml
+++ b/nirvana-parties/src/main/resources/plugin.yml
@@ -1,8 +1,7 @@
-main: com.veltpvp.nirvana.Nirvana
+main: com.veltpvp.nirvana.parties.NirvanaParties
 name: ${project.name}
 description: ${project.description}
-depend: [ qLib ]
 version: ${project.version}
 author: BizarreAlex
-depend: [nirvana-parties]
+depend: [qLib]
 load: STARTUP
